MDEV-36888 Assertion `typeid(*copy) == typeid(*this)' in Item_func_or_sum::do_build_clone

Problems was in forgotten Item type in two places: clone and finding origin field.

The handling added.